--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'SelfDeveloper' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+
   target 'SelfDeveloperTests' do
     inherit! :complete
     # Pods for testing
