--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "android-release": "cd ./android && sh gradlew assembleRelease",
+    "clean-android": "cd ./android && sh gradlew app:assembleDebug && sh gradlew installDebug",
+    "clean": "cd ./android && sh gradlew clean",
+    "upload-production": "appcenter codepush release-react -a TruongGiang/SelfDeveloper -d Production",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "appcenter": "^4.0.2",
+    "appcenter-analytics": "^4.0.2",
+    "appcenter-cli": "^2.7.4",
+    "appcenter-crashes": "^4.0.2",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-code-push": "^7.0.0",
+    "react-native-responsive-screen": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
