--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
     "react-native-code-push": "^7.0.0",
+    "react-native-fast-image": "^8.3.4",
     "react-native-responsive-screen": "^1.4.2"
   },
   "devDependencies": {
