--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.2",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "appcenter": "^4.0.2",
     "appcenter-analytics": "^4.0.2",
     "appcenter-cli": "^2.7.4",
     "appcenter-crashes": "^4.0.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
     "react-native-code-push": "^7.0.0",
     "react-native-fast-image": "^8.3.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-responsive-screen": "^1.4.2"
   },
   "devDependencies": {
