--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "appcenter-crashes": "^4.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "i18n-js": "^3.8.0",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
@@ -35,7 +37,9 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/i18n-js": "^3.8.1",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.170",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^25.1.0",
